# api/out/DebatIDOAPI-python-flask/DebatIDOAPI/controllers/database_controller.py
@@ -10,6 +10,8 @@ from DebatIDOAPI.models.person import Person  # noqa: E501
 from DebatIDOAPI.models.company import Company  # noqa: E501
 from DebatIDOAPI import util
 
+from typing import List, Dict  # noqa: F401
+
 from flask import current_app
 import inspect
 
@@ -20,73 +22,147 @@ import mysql.connector
 url = make_url(os.getenv('DATABASE_URL'))
 mydb = mysql.connector.connect(host=url.host,user=url.username,passwd=url.password,database=url.database)
 
+classNames = {
+    "quote" : Quote,
+    "reference" : Reference
+}
+
+classSQLRequests = {
+    Quote : {
+        "List" : "SELECT q.id, q.title, q.details, q.typeID, qt.title as typeTitle, q.dateUpdate FROM quote q JOIN quoteType qt ON q.typeID = qt.id;",
+        "ID" : "SELECT q.id, q.title, q.details, q.typeID, qt.title, q.dateUpdate FROM quote q JOIN quoteType qt ON q.typeID = qt.id WHERE q.id = ",
+        "DELETE" : "DELETE FROM quote q WHERE q.id = ",
+        "quoteMains" : "SELECT q.id, q.title, q.details, q.typeID, qt.title as typeTitle, q.dateUpdate FROM quote q JOIN quoteType qt ON q.typeID JOIN quoteLink ql ON ql.quoteMainID = q.id WHERE ql.quoteSupportID = ",
+        "quoteSupports" : "SELECT q.id, q.title, q.details, q.typeID, qt.title as typeTitle, q.dateUpdate FROM quote q JOIN quoteType qt ON q.typeID JOIN quoteLink ql ON ql.quoteSupportID = q.id WHERE ql.quoteMainID = "
+    },
+    Reference : {
+        "List" : "SELECT r.id, r.title, r.details, r.url, r.date, r.typeID, rt.title as typeTitle, r.reliability, r.dateUpdate FROM reference r JOIN referenceType rt ON r.typeID = rt.id;",
+        "ID" : "SELECT r.id, r.title, r.details, r.url, r.date, r.typeID, rt.title, r.reliability, r.dateUpdate FROM reference r JOIN referenceType rt ON r.typeID = rt.id WHERE r.id =",
+        "DELETE" : "DELETE FROM reference r WHERE r.id = ",
+        Quote : "SELECT r.id, r.title, r.details, r.url, r.date, r.typeID, rt.title, r.reliability, r.dateUpdate FROM reference r JOIN quoteReference qr ON r.id = qr.referenceID JOIN referenceType rt ON r.typeID = rt.id WHERE qr.quoteID = "
+    },
+    Theme : {
+        "List" : "SELECT t.id, t.title as title FROM theme t;",
+        "ID" : "SELECT t.id, t.title as title FROM theme t WHERE t.id = ",
+        "DELETE" : "DELETE FROM theme t WHERE t.id = ",
+        Quote : "SELECT t.id, t.title as title FROM theme t JOIN quoteTheme qt ON t.id = qt.themeID WHERE qt.quoteID = "
+    },
+    Protagonist : {
+        "List" : "SELECT p.id, p.type, p.name, p.link, p.photo, p.dateUpdate FROM protagonist p;",
+        "ID" : "SELECT p.id, p.type, p.name, p.link, p.photo, p.dateUpdate FROM protagonist p WHERE p.id = ",
+        "DELETE" : "DELETE FROM protagonist pr WHERE pr.id = ",
+        Quote : "SELECT pe.id, pe.surname, pe.role, pe.dateUpdate FROM protagonist pr JOIN person pe ON pr.id = pe.id JOIN quoteAuthor qa ON qa.authorID = ",
+        Reference : "SELECT p.id, p.type, p.name, p.link, p.photo, p.dateUpdate FROM protagonist p JOIN referenceAuthor ra ON p.id = ra.authorID JOIN reference r ON r.id = ra.referenceID WHERE r.id = "
+    },
+    Person : {
+        "List" : "",
+        "ID" : "SELECT pe.id, pe.surname, pe.role, pe.dateUpdate FROM person pe WHERE pe.id = ",
+        "DELETE" : "DELETE FROM person p WHERE p.id = ",
+        Protagonist : "SELECT pe.id, pe.surname, pe.role, pe.dateUpdate FROM protagonist pr JOIN person pe ON pr.id = pe.id WHERE pr.id = "
+    },
+    Company : {
+        "List" : "",
+        "ID" : "SELECT c.id, c.siret, c.dateUpdate FROM company c WHERE c.id = ",
+        "DELETE" : "DELETE FROM company c WHERE c.id = ",
+        Protagonist : "SELECT c.id, c.siret, c.dateUpdate FROM protagonist pr JOIN company c ON pr.id = c.id WHERE pr.id = "
+    }
+
+
+}
+
 class Database:
-    @classmethod
-    def getListQuotes(cls):
-        listQuotes = []
-        curQuote = mydb.cursor(dictionary=True)
-        curQuote.execute("SELECT q.id as id, q.title as title, q.details as details, q.typeID as typeID, qt.title as typeTitle, q.dateUpdate as dateUpdate FROM quote q JOIN quoteType qt ON q.typeID = qt.id;")
-        for rowQuote in curQuote.fetchall() :
-            listQuotes.append(Quote.from_dict(rowQuote))
-        return listQuotes
 
     @classmethod
-    def getProtagonistFromID(cls, id):
-        protagonist = None
-        cur = mydb.cursor(dictionary=True)
-        cur.execute("SELECT p.id, p.type, p.name, p.link, p.photo, p.dateUpdate FROM protagonist p WHERE p.id = "+str(id)+";")
-        for row in cur.fetchall() :
-            protagonist = Protagonist.from_dict(row)
-            if (protagonist.type == "person"):
-                protagonist.person = Database.getPersonFromReferenceID(protagonist.id)
-            elif (protagonist.type == "person"):
-                protagonist.company = Database.getCompanyFromReferenceID(protagonist.id)
-        return protagonist
+    def getOtherClassParameters(cls, classMyObject):
+        dictSubClasses = {}
+        for objectName, subClassObject in classMyObject.openapi_types.items():
+            if type(subClassObject) is type(List):
+                dictSubClasses[objectName] = subClassObject.__args__[0]
+        return dictSubClasses
 
     @classmethod
-    def getReferencesFromQuoteID(cls, id):
+    #TODO
+    def patchObjectFromID(cls, myPatchObject, id):
+        if (id == myPatchObject.id):
+            dictSubClasses = Database.getOtherClassParameters(myPatchObject)
+            for objectName, subClassObject in dictSubClasses.items():
+                parameter = myObject.attribute_map[objectName]
+                test = getattr(myPatchObject, parameter)
+                current_app.logger.debug(parameter)
+                current_app.logger.debug(test)
+        else:
+            current_app.logger.debug("Not same id")
+
+    @classmethod
+    def deleteObjectFromID(cls, classMyObject, id):
+        valueReturn = 0
+        if ("DELETE" in classSQLRequests[classMyObject]):
+            cur = mydb.cursor(dictionary=True)
+            cur.execute(classSQLRequests[classMyObject]["DELETE"]+str(id)+";")
+            mydb.commit()
+            valueReturn = cur.rowcount
+        return valueReturn
+
+    @classmethod
+    def getObjectFromID(cls, classMyObject, id):
+        myObject = None
+        if ("ID" in classSQLRequests[classMyObject]):
+            cur = mydb.cursor(dictionary=True)
+            cur.execute(classSQLRequests[classMyObject]["ID"]+str(id)+";")
+            for row in cur.fetchall() :
+                myObject = classMyObject.from_dict(row)
+        return myObject
+
+    @classmethod
+    def getList(cls, classMyObject):
         list = []
-        cur = mydb.cursor(dictionary=True)
-        cur.execute("SELECT r.id, r.title, r.details, r.url, r.date, r.typeID, rt.title, r.reliability, r.dateUpdate FROM reference r JOIN quoteReference qr ON r.id = qr.referenceID JOIN referenceType rt ON r.typeID = rt.id WHERE qr.quoteID = "+str(id)+";")
-        for row in cur.fetchall() :
-            r = Reference.from_dict(row)
-            r.authors = Database.getAuthorFromReferenceID(r.id)
-            list.append(r)
+        if ("List" in classSQLRequests[classMyObject]):
+            cur = mydb.cursor(dictionary=True)
+            cur.execute(classSQLRequests[classMyObject]["List"])
+            for row in cur.fetchall() :
+                list.append(classMyObject.from_dict(row))
         return list
 
     @classmethod
-    def getThemesFromQuoteID(cls, id):
+    def getListFromOtherID(cls, classMyObject, classConstraintID, id):
         list = []
-        cur = mydb.cursor(dictionary=True)
-        cur.execute("SELECT t.id as id, t.title as title FROM theme t JOIN quoteTheme qt ON t.id = qt.themeID WHERE qt.quoteID = "+str(id)+";")
-        for row in cur.fetchall() :
-            list.append(Theme.from_dict(row))
+        if (classConstraintID in classSQLRequests[classMyObject]):
+            cur = mydb.cursor(dictionary=True)
+            current_app.logger.debug(classSQLRequests[classMyObject][classConstraintID]+str(id)+";")
+            cur.execute(classSQLRequests[classMyObject][classConstraintID]+str(id)+";")
+            for row in cur.fetchall() :
+                list.append(classMyObject.from_dict(row))
         return list
 
     @classmethod
-    def getAuthorFromReferenceID(cls, id):
-        list = []
-        cur = mydb.cursor(dictionary=True)
-        cur.execute("SELECT p.id, p.type, p.name, p.link, p.photo, p.dateUpdate FROM protagonist p JOIN referenceAuthor ra ON p.id = ra.authorID JOIN reference r ON r.id = ra.referenceID WHERE r.id = "+str(id)+";")
-        for row in cur.fetchall() :
-            protagonist = Database.getProtagonistFromID(row['id'])
-            list.append(protagonist)
-        return list
+    def getObjectFromOtherID(cls, classMyObject, classConstraintID, id):
+        myObject = None
+        if (classConstraintID in classSQLRequests[classMyObject]):
+            cur = mydb.cursor(dictionary=True)
+            cur.execute(classSQLRequests[classMyObject][classConstraintID]+str(id)+";")
+            for row in cur.fetchall() :
+                myObject = classMyObject.from_dict(row)
+        return myObject
 
     @classmethod
-    def getPersonFromReferenceID(cls, id):
-        person = None
-        cur = mydb.cursor(dictionary=True)
-        cur.execute("SELECT pe.id, pe.protagonistID, pe.surname, pe.role, pe.dateUpdate FROM protagonist pr JOIN person pe ON pr.id = pe.protagonistID WHERE pr.id = "+str(id)+";")
-        for row in cur.fetchall() :
-            person = Person.from_dict(row)
-        return person
+    def getDetailsFromOtherClassParameters(cls, myObject):
+        if myObject is not None:
+            if (type(myObject) is Protagonist):
+                if (myObject.type == "person"):
+                    myObject.person = Database.getObjectFromOtherID(Person,Protagonist,myObject.id)
+                elif (myObject.type == "person"):
+                    myObject.company = Database.getObjectFromOtherID(Company,Protagonist,myObject.id)
+            elif (type(myObject) is Quote):
+                dictSubClasses = Database.getOtherClassParameters(myObject)
+                for objectName, subClassObject in dictSubClasses.items():
+                    parameter = myObject.attribute_map[objectName]
+                    if parameter == "quoteMains" or parameter == "quoteSupports":
+                        setattr(myObject, objectName, Database.getListFromOtherID(subClassObject,parameter,myObject.id))
+                    else:
+                        setattr(myObject, objectName, Database.getListFromOtherID(subClassObject,type(myObject),myObject.id))
+            else:
+                dictSubClasses = Database.getOtherClassParameters(myObject)
+                for objectName, subClassObject in dictSubClasses.items():
+                    setattr(myObject, objectName, Database.getListFromOtherID(subClassObject,type(myObject),myObject.id))
 
-    @classmethod
-    def getCompanyFromReferenceID(cls, id):
-        company = None
-        cur = mydb.cursor(dictionary=True)
-        cur.execute("SELECT pe.id, pe.protagonistID, pe.siret, pe.dateUpdate FROM protagonist pr JOIN company c ON pr.id = c.protagonistID WHERE pr.id = "+str(id)+";")
-        for row in cur.fetchall() :
-            company = Company.from_dict(row)
-        return company
+        return myObject
