# api/out/DebatIDOAPI-python-flask/DebatIDOAPI/controllers/quote_controller.py
@@ -3,12 +3,14 @@ import six
 
 from DebatIDOAPI.models.error import Error  # noqa: E501
 from DebatIDOAPI.models.quote import Quote  # noqa: E501
+from DebatIDOAPI.models.reference import Reference  # noqa: E501
+from DebatIDOAPI.models.theme import Theme  # noqa: E501
+from DebatIDOAPI.models.protagonist import Protagonist  # noqa: E501
 from DebatIDOAPI import util
 
+from DebatIDOAPI.controllers.database_controller import Database
 from flask import current_app
 import inspect
-
-from DebatIDOAPI.controllers.database_controller import Database
 
 def quote_get(offset=None, limit=None):  # noqa: E501
     """Retrieve a collection of Quote objects
@@ -23,31 +25,27 @@ def quote_get(offset=None, limit=None):  # noqa: E501
     :rtype: None
     """
     current_app.logger.debug("{} -- API_KEY : {}".format(inspect.stack()[0][3],connexion.request.headers['API_KEY']))
-    quoteList = Database.getListQuotes()
 
-    for q in quoteList :
-        q.themes = Database.getThemesFromQuoteID(q.id)
-        q.references = Database.getReferencesFromQuoteID(q.id)
+    list = Database.getList(Quote)
+    for l in list :
+        Database.getDetailsFromOtherClassParameters(l)
 
-    return quoteList
+    return list
 
 
-def quote_post(body):  # noqa: E501
+def quote_post(quote):  # noqa: E501
     """Create Quote
 
      # noqa: E501
 
-    :param body:
-    :type body:
+    :param quote:
+    :type quote: dict | bytes
 
     :rtype: None
     """
-    current_app.logger.debug("{} -- API_KEY : {}".format(inspect.stack()[0][3],connexion.request.headers['API_KEY']))
     if connexion.request.is_json:
-        body = Body.from_dict(connexion.request.get_json())  # noqa: E501
-        for value in body._student_ids:
-            mycursor.execute("INSERT INTO teacher_student VALUES ("+str(teacher_id)+","+str(value)+")")
-    return 'Your API KEY : '+connexion.request.headers['API_KEY']
+        quote = Quote.from_dict(connexion.request.get_json())  # noqa: E501
+    return 'do some magic!'
 
 
 def quotes_quote_id_supports_get(quote_id, offset=None, limit=None):  # noqa: E501
@@ -77,7 +75,7 @@ def quotes_quote_iddelete(quote_id):  # noqa: E501
 
     :rtype: None
     """
-    return 'do some magic!'
+    return Database.deleteObjectFromID(Quote,quote_id)
 
 
 def quotes_quote_idget(quote_id):  # noqa: E501
@@ -90,7 +88,9 @@ def quotes_quote_idget(quote_id):  # noqa: E501
 
     :rtype: None
     """
-    return 'do some magic!'
+    myObject = Database.getObjectFromID(Quote,quote_id)
+    Database.getDetailsFromOtherClassParameters(myObject)
+    return myObject
 
 
 def quotes_quote_idpatch(quote_id, quote):  # noqa: E501
