# api/out/DebatIDOAPI-python-flask/DebatIDOAPI/controllers/reference_controller.py
@@ -5,6 +5,9 @@ from DebatIDOAPI.models.error import Error  # noqa: E501
 from DebatIDOAPI.models.reference import Reference  # noqa: E501
 from DebatIDOAPI import util
 
+from DebatIDOAPI.controllers.database_controller import Database
+from flask import current_app
+import inspect
 
 def reference_get(offset=None, limit=None):  # noqa: E501
     """Retrieve a collection of Reference objects
@@ -18,19 +21,25 @@ def reference_get(offset=None, limit=None):  # noqa: E501
 
     :rtype: None
     """
-    return 'do some magic!'
+    list = Database.getList(Reference)
+    for l in list :
+        Database.getDetailsFromOtherClassParameters(l)
+
+    return list
 
 
-def reference_post(body):  # noqa: E501
+def reference_post(reference):  # noqa: E501
     """Create Reference
 
      # noqa: E501
 
-    :param body: 
-    :type body: 
+    :param reference:
+    :type reference: dict | bytes
 
     :rtype: None
     """
+    if connexion.request.is_json:
+        reference = Reference.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
 
 
@@ -44,7 +53,7 @@ def references_reference_iddelete(reference_id):  # noqa: E501
 
     :rtype: None
     """
-    return 'do some magic!'
+    return Database.deleteObjectFromID(Reference,reference_id)
 
 
 def references_reference_idget(reference_id):  # noqa: E501
@@ -57,7 +66,9 @@ def references_reference_idget(reference_id):  # noqa: E501
 
     :rtype: None
     """
-    return 'do some magic!'
+    myObject = Database.getObjectFromID(Reference,reference_id)
+    Database.getDetailsFromOtherClassParameters(myObject)
+    return myObject
 
 
 def references_reference_idpatch(reference_id, reference):  # noqa: E501
@@ -67,7 +78,7 @@ def references_reference_idpatch(reference_id, reference):  # noqa: E501
 
     :param reference_id: The Id of a Reference
     :type reference_id: int
-    :param reference: 
+    :param reference:
     :type reference: dict | bytes
 
     :rtype: None
